--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,22 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+ion-input {
+    background-color: #fff !important;
+    border-radius: .375rem;
+    border: thin solid;
+    input {
+      padding-left: 10px !important;
+    }
+  }
+
+// ion-item {
+//     border: thin solid blue;
+// }
+// ion-item {
+//     --inner-padding-bottom: 0;
+//     --inner-padding-end: 0;
+//     --inner-padding-start: 0;
+//     --inner-padding-top: 0;
+//   }
